adds contact form

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Bike Comparison</title>
+    <title>Contact Us</title>
     <style>
         /* General Reset */
         * {
@@ -35,11 +35,6 @@
             margin-bottom: 5px;
         }
 
-        header p {
-            font-size: 1.2rem;
-            margin-top: 5px;
-        }
-
         nav a {
             color: #4CAF50;
             text-decoration: none;
@@ -51,19 +46,19 @@
             text-decoration: underline;
         }
 
-        /* Main Content */
-        main {
-            margin: 20px auto;
-            max-width: 1200px;
-            text-align: center;
+        /* Contact Form Section */
+        .contact-section {
+            margin: 0px auto;
+            max-width: 800px;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
         }
 
         iframe {
             width: 100%;
-            height: 80vh; /* 80% of the viewport height */
+            height: 800px;
             border: none;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         /* Footer */
@@ -87,26 +82,26 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>E-Bike Comparison</h1>
-        <p>Find the perfect e-bike by comparing features like range, speed, weight, and more!</p>
+        <h1>Contact Us</h1>
         <nav>
-            <a href="contact.html">Contact Us</a>
+            <a href="index.html">Back to Home</a>
         </nav>
     </header>
 
-    <!-- Main Content -->
-    <main>
+    <!-- Contact Form Section -->
+    <section class="contact-section">
         <iframe
-        src="https://airtable.com/embed/appLuMpoUJaN9ZrPo/shr7HU7CSu56q8GAo?viewControls=on"
+            src="https://docs.google.com/forms/d/e/1FAIpQLScJv4GhiC8sSGdqdB6r9qAUO3vpw1PbpoU-E5oGsI63K0GnGg/viewform?embedded=true"
+            width="100%"
+            height="800"
             frameborder="0"
-        ></iframe>
-    </main>
+        >Loading…</iframe>
+    </section>
 
     <!-- Footer -->
     <footer>
         <p>
-            Powered by <a href="https://airtable.com" target="_blank">Airtable</a>. Designed with ❤️ for e-bike enthusiasts. 
-            <a href="contact.html">Contact Us</a>
+            <a href="index.html">Back to Home</a>
         </p>
     </footer>
 </body>
