--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Footer -->
     <footer>
         <p>
-            Powered by <a href="https://airtable.com" target="_blank">Airtable</a>. Designed with ❤️ for e-bike enthusiasts. 
+            Built in SF with ❤️ for e-bike enthusiasts. 
             <a href="contact.html">Contact Us</a>
         </p>
     </footer>
