small copy change

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- Header -->
     <header>
         <h1>E-Bike Comparison</h1>
-        <p>Find the perfect e-bike by comparing features like range, speed, weight, and more!</p>
+        <p>Find the perfect e-bike by comparing different models!</p>
         <nav>
             <a href="contact.html">Contact Us</a>
         </nav>
