--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
         ></iframe>
     </main>
 
+    <!-- Adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2982221230572824"
+     crossorigin="anonymous"></script>
+    <!-- Footer Ad -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-2982221230572824"
+        data-ad-slot="6138986253"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <!-- Footer -->
     <footer>
         <p>
